--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "The Charting Application Tester (CAT) lets users make and adjust web graphics on the fly.",
   "main": "./index.html",
   "scripts": {
-    "build": "rollup -c ./scripts/rollup.config.js | babel > ./build/cat.js"
+    "format": "prettier --write 'src/**/*.js'",
+    "build": "npm run format && rollup -c",
+    "watch": "npm run format && rollup -c -w"
   },
   "author": "Rho, Inc.",
   "license": "MIT",
