--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "build": "npm run bundle && npm run format",
     "bundle": "rollup -c",
     "format": "npm run format-src && npm run format-bundle",
-        "format-bundle": "prettier --write \"build/CAT.js\"",
-        "format-src": "prettier --write \"src/**/*.js\"",
+    "format-bundle": "prettier --write \"build/CAT.js\"",
+    "format-src": "prettier --write \"src/**/*.js\"",
     "watch": "rollup -c -w"
   },
   "author": "Rho, Inc.",
   "license": "MIT",
   "dependencies": {
     "d3": "^3.5.14",
-    "jquery": "~3"
+    "jquery": "~3",
+    "json5": "^0.5.1"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
