--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "d3": "^3.5.14",
     "jquery": "~3",
     "json5": "^0.5.1",
-    "express": "~4"
+    "express": "~4",
+    "body-parser":"~1"
   },
   "devDependencies": {
     "babel-cli": "^6.5.1",
