add chart list ( #30 ) and refactor status reporting ( #31 ).

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ node_modules
 local
 
 # Don't put charts from server in version control
-server/pages/charts/
+server/pages/charts/fromCAT
+server/pages/charts/chartList.json
