--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format-bundle": "prettier --write \"build/CAT.js\"",
     "format-src": "prettier --write \"src/**/*.js\"",
     "watch": "rollup -c -w",
-    "start": "node server/app.js"
+    "start": "node server/app.js",
+    "initServer":"node server/initServer.js"
   },
   "author": "Rho, Inc.",
   "license": "MIT",
