--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "d3": "^3.5.14",
+    "webcharts":"~1",
     "jquery": "~3",
     "json5": "^0.5.1",
     "express": "~4",
