--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "jimp": "^0.2.27",
         "jsdom": "~7",
         "prettier": "^1.7.4",
+        "promise-polyfill": "8.1.0",
         "rollup": "^0.66.6",
         "rollup-plugin-babel": "^2.7.1",
         "showdown": "~1"
