--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cat",
-    "version": "0.9.1",
+    "version": "0.10.0",
     "description": "The Charting Application Tester (CAT) lets users make and adjust web graphics on the fly.",
     "module": "./src/index.js",
     "main": "./build/cat.js",
@@ -12,7 +12,7 @@
         "format-bundle": "prettier --print-width=100 --tab-width=4 --single-quote --write ./build/cat.js",
         "watch": "rollup -c -w",
         "start": "node server/app.js",
-        "initServer": "node server/initServer.js"
+        "init-server": "node server/initServer.js"
     },
     "author": "Rho, Inc.",
     "license": "MIT",
