--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "author": "Rho, Inc.",
     "license": "MIT",
     "dependencies": {
+        "body-parser": "~1",
         "d3": "^3.5.14",
-        "webcharts": "~1",
-        "jquery": "~3",
-        "json5": "^0.5.1",
         "express": "~4",
-        "body-parser": "~1"
+        "jquery": "^3.4.1",
+        "json5": "^0.5.1",
+        "webcharts": "~1"
     },
     "devDependencies": {
         "babel-plugin-external-helpers": "^6.22.0",
