--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "body-parser": "~1",
         "d3": "^3.5.14",
         "express": "~4",
+        "handsontable": "^7.0.3",
         "jquery": "^3.4.1",
         "json5": "^0.5.1",
         "webcharts": "~1"
