--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "promise-polyfill": "8.1.0",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^2.7.1",
-    "showdown": "~1",
+    "showdown": "^1.9.1",
     "url-parse": "^1.4.7"
   }
 }
